Fix viewport size and image cropped

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,5 +1,6 @@
 header {
-  min-height: 100vh;
+  min-height: 100dvh;
+  padding-top: 150px;
   display: flex;
   align-items: end;
 }
